--- a/02-visibility/13-totally-triangle.html
+++ b/02-visibility/13-totally-triangle.html
@@ -1,1 +1,1 @@
-<div></div><style>body{background:#0B2429}div{width:0;height:0;margin:-8;border-right:140px solid transparent;border-top:140px solid#F3AC3C}
+<style>*>*{background:linear-gradient(135deg,#F3AC3C 75pt,#0B2429 0
